# buddy-allocator

./: .gitignore  CMakeLists.txt  buddy.c  buddy.h  evaluation.cpp  memcpy.c  memcpy.h  rtos-alloc.c  rtos-alloc.h  visualizer.py
